complete the site

--- a/SellerDashboard/seller.html
+++ b/SellerDashboard/seller.html
@@ -23,7 +23,7 @@
       <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav mr-auto mb-2 mb-lg-0 text-center">
           <li class="nav-item">
-            <a class="nav-link" href="../Marketplace/market.html">Market</a>
+            <a class="nav-link" href="./seller.html">Dashboard</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">About Us</a>
@@ -48,7 +48,7 @@
       </div>
       <div class="col-md-6 text-center align-middle">
         <div class="p-2"><button type="button" class="btn btn-primary btn-md btn-block md-4" data-toggle="modal" data-target="#exampleModal">Profile</button></div>
-        <div class="p-2"><button type="button" class="btn btn-info btn-md btn-block md-4">View Products</button></div>
+        <div class="p-2"><a href="./product/products.html"><button type="button" class="btn btn-info btn-md btn-block md-4">View Products</button></a></div>
         <div class="p-2"><button type="button" class="btn btn-danger btn-md btn-block md-4" onclick="deleteIt()">Delete Profile</button></div>
         <div class="p-2"><button type="button" class="btn btn-secondary btn-md btn-block md-4" onclick="logout()">Log Out</button></div>
       </div>
