--- a/buyer/buyer.html
+++ b/buyer/buyer.html
@@ -64,7 +64,7 @@
                     </div>
                     <div class="col-sm-6">
                         <div class="input-group mb-3">
-                            <span class="input-group-text" id="basic-addon1">First Name</span>
+                            <span class="input-group-text" id="basic-addon1">Second Name</span>
                             <input type="text" class="form-control" name="secondName" aria-label="Username" aria-describedby="basic-addon1">
                         </div>
                     </div>
